@@ -1,5 +1,6 @@
 Current version : BridJ 0.5-SNAPSHOT
 
+- Added deprecated support for struct fields implemented as Java fields, to ease up migration from JNA (needs manual calls to BridJ.writeToNative(struct) and BridJ.readFromNative(struct)) (issue #54)
 ...
 
 BridJ 0.4 (r1869, 20110408)
